--- a/notebooks/03-role-playing-persona.ipynb.ipynb
+++ b/notebooks/03-role-playing-persona.ipynb.ipynb
@@ -188,6 +188,7 @@
     "\n",
     "The Role-Playing/Persona Pattern involves instructing an AI to adopt a specific identity, perspective, or expertise when responding to prompts. This pattern leverages:\n",
     "\n",
+    "**Scientific Basis:**\n",
     "- **Cognitive Role Theory**: People behave differently based on perceived roles.   \n",
     "Role theory explains roles by presuming that persons are members of social positions and hold expectations for their own behaviors and those of other persons - this directly supports the persona pattern because it shows that people naturally adjust their behavior based on their perceived role.     \n",
     "**Ref.:** Biddle, B. J. (1986). [Recent developments in role theory. Annual Review of Sociology](https://www.annualreviews.org/content/journals/10.1146/annurev.so.12.080186.000435), 12(1), 67-92\n",
